--- a/templates/include/one_answer.html
+++ b/templates/include/one_answer.html
@@ -6,13 +6,11 @@
             <img src="{{ answer.author.profile_pic.url }}" alt="Аватар">
             <p class="user-nickname">{{ answer.author.nickname }}</p>
             <div class="like-dislike">
-                <button class="upvote-btn btn btn-secondary btn-circle" data-type="answer"
-                        data-action="upvote" data-id="{{ answer.id }}">
+                <button class="upvote-btn btn btn-secondary btn-circle" data-type="answer" data-id="{{ answer.id }}">
                     <i class="fas fa-chevron-up"></i>
                 </button>
                 <i class="post-rating">{{ answer.rating }}</i>
-                <button class="downvote-btn btn btn-secondary btn-circle" data-type="answer"
-                        data-action="downvote" data-id="{{ answer.id }}">
+                <button class="downvote-btn btn btn-secondary btn-circle" data-type="answer" data-id="{{ answer.id }}">
                     <i class="fas fa-chevron-down"></i>
                 </button>
             </div>
