--- a/templates/include/one_question.html
+++ b/templates/include/one_question.html
@@ -6,13 +6,11 @@
             <img src="{{ question.author.profile_pic.url }}" alt="Аватар">
             <p class="user-nickname">{{ question.author.nickname }}</p>
             <div class="like-dislike">
-                <button class="upvote-btn btn btn-secondary btn-circle" data-type="question"
-                        data-action="upvote" data-id="{{ question.id }}">
+                <button class="upvote-btn btn btn-secondary btn-circle" data-type="question" data-id="{{ question.id }}">
                     <i class="fas fa-chevron-up"></i>
                 </button>
                 <i class="post-rating">{{ question.rating }}</i>
-                <button class="downvote-btn btn btn-secondary btn-circle" data-type="question"
-                        data-action="downvote" data-id="{{ question.id }}">
+                <button class="downvote-btn btn btn-secondary btn-circle" data-type="question" data-id="{{ question.id }}">
                     <i class="fas fa-chevron-down"></i>
                 </button>
             </div>
